--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <div class="torso"></div>
                 <div class="leftarm"></div>
                 <div class="rightarm"></div>
+                <div class="weapons"></div>
                 <div class="leftleg"></div>
                 <div class="leftfoot"></div>
                 <div class="rightleg"></div>
