weapon pwr disp

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <div class="leftarm"></div>
                 <div class="rightarm"></div>
                 <div class="weapons"></div>
+                <div class = "label1"></div>
                 <div class="leftleg"></div>
                 <div class="leftfoot"></div>
                 <div class="rightleg"></div>
@@ -89,6 +90,7 @@
                 <div class="rightarm"></div>
                 <div class="leftarm"></div>
                 <div class="leftleg"></div>
+                <div class = "label2"></div>
                 <div class="leftfoot"></div>
                 <div class="rightleg"></div>
                 <div class="rightfoot"></div>
