--- a/index.html
+++ b/index.html
@@ -140,10 +140,11 @@
         <h1>Learn to Play CASTLE KNIGHT</h1>
           <p>THE GOAL OF THE GAME IS TO MAKE THE ENEMY CASTLES HP 0.
               PRESS FIGHT TO HAVE YOUR WARRIORS ENGAGE IN BATTLE.
-              WHEN YOU WIN A BATTLE YOU WILL DAMAGE THE OPPONENT AND YOU CAN GAIN GOLD.
+              WHEN YOU WIN A BATTLE YOU WILL DAMAGE THE OPPONENT AND YOU WILL GAIN THAT MUCH GOLD.
           </p>
           <p>YOU CAN USE GOLD TO BUY MORE ATTACK POWER OR YOU CAN HEAL YOURSELF. </p>
           <p>TRY THE GAME ON HARD MODE WHERE THE ENEMY CASTLE HAS STRONGER WARRIORS AND MORE HEALTH. BUT BEWARE IT WILL BE A BIGGER CHALLENGE</p>
+          <P>GOOD LUCK!!!!</P>
           <div id="modal-footer">
             <button class="modal-buttons" id="close" href="#">Close</button>
         </div>
