enemy stronger, displ working

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 </div>
 <div>    <h1 id="box3"></h1>
     <select class = 'buymenu' id="selection">
-        <option value= 1 id="Newg">NEW GAME</option>
         <option value= 2 id="Rules">RULES</option>
+        <option value= 1 id="Newg">NEW GAME</option>
         <option value= 3 id="Hard">HARD MODE</option>
+        <option value= 4 id="infinite">INFINITE MODE</option>
     </select> 
     <button id="selecting">select</button>
       
