win and buy menu setup done

--- a/index.html
+++ b/index.html
@@ -140,6 +140,16 @@
         </div>
     </div>
     </div>
+
+    <div id = "winbuy">
+        <p>SPEND 10 GOLD AND YOU CAN CAN GAIN A PERMANENT WEAPON POWER UP
+        </p>
+        <button class="buy-buttons" id="buywin1">WEAPON + 1</button>
+        <P>SPEND 10 GOLD AND YOU CAN GAIN 25 HP</P>
+        <button class="buy-buttons" id="buywin2">HEALTH + 25</button>
+        <p> CONSERVE GOLD AND MAKE A LARGE PURCHASE IN THE FUTURE</p>
+        <button class="buy-buttons" id="buywin3">CLOSE</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
