update gold weapons correctly

--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
     <div id = "winbuy">
         <p>SPEND 10 GOLD AND YOU CAN CAN GAIN A PERMANENT WEAPON POWER UP
         </p>
-        <button class="buy-buttons" id="buywin1">WEAPON + 1</button>
+        <button class="buyBts" id="buywin1">WEAPON + 1</button>
         <P>SPEND 10 GOLD AND YOU CAN GAIN 25 HP</P>
-        <button class="buy-buttons" id="buywin2">HEALTH + 25</button>
+        <button class="buyBts" id="buywin2">HEALTH + 25</button>
         <p> CONSERVE GOLD AND MAKE A LARGE PURCHASE IN THE FUTURE</p>
-        <button class="buy-buttons" id="buywin3">CLOSE</button>
+        <button class="buyBts" id="buywin3">CLOSE</button>
     </div>
     <script src="script.js"></script>
 </body>
