--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <button id="selecting">select</button>
       
     
-    <h1 id ="test">Castle Knights</h1>
+    <h1 id ="test">Castle Fighter</h1>
 </div>
 <div>    
     <h1 class = 'hp' id="box4">HEALTH</h1>
