--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
     <div>
         <h3 class = "gold" id="box9">YOUR GOLD</h3>
         <p id = 'gold1'> </p>
-    </div>
+    </div> 
 
     <div class = 'bottom' id ="box10">
 <select class = 'buymenu' id = 'shopping'>
+    <option value= 3 id ="attadd45">ATT + # = allG</option>
     <option value= 1 id="attadd41">ATT +1 1G</option>
     <option value= 2 id="heal41">HEAL +1 1G</option>
-    <!-- <option value= 4 id ="attadd45">ATT + 5 4G</option> -->
     <!-- <option value=4 id="heal45">HEAL +5 4G</option> -->
 </select> 
         <button id="BUY">BUY</button>
