--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <h1 id="box2"></h1>
 
     <h1></h1>
+    <button id="BUY">BUY</button>
     <button id="FIGHT">FIGHT</button>
   
 </div>
@@ -114,7 +115,7 @@
     <option value= 2 id="heal41">HEAL +1 1G</option>
     <!-- <option value=4 id="heal45">HEAL +5 4G</option> -->
 </select> 
-        <button id="BUY">BUY</button>
+        <!-- <button id="BUY">BUY</button> -->
     </div>
     <div>
         <h1 id="box11"></h1>
@@ -149,6 +150,8 @@
         <button class="buyBts" id="buywin2">HEALTH + 25</button>
         <p> CONSERVE GOLD AND MAKE A LARGE PURCHASE IN THE FUTURE</p>
         <button class="buyBts" id="buywin3">CLOSE</button>
+        <button class="buyBts" id="buywin4">CRIT swap</button>
+        <button class="buyBts" id="buywin5">dmg/crit</button>
     </div>
     <script src="script.js"></script>
 </body>
